# Habit_Tracker

./: .env.example  .flake8  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  ci_cd.yml
backend/: Dockerfile  requirements.txt
backend/config/: settings.py  urls.py
backend/habits/: models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/habits/migrations/: 0001_initial.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_managers_remove_customuser_username_and_more.py  0003_alter_customuser_managers.py  0004_alter_customuser_options_alter_customuser_managers_and_more.py
config/: settings.py
nginx/: nginx.conf
