[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
types-requests = "^2.32.0.20241016"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.241126"
openpyxl = "^3.1.5"
flake8 = "^7.1.1"
requests = "^2.32.3"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest-cov = "^6.0.0"
pytest = "^8.3.4"
flake8 = "^7.3.0"
coverage = "^7.9.2"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
    \.git
  )/
)
'''

[tool.isort]
line_length = 119
